# nordpool_client

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: run.py
src/nordpool/: AuctionDataAvailability.json  AuctionDataAvailabilityLatest.json  __init__.py  client.py
