[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nordpool-client"
version = "1.0.0-dev"
description = " A python client to fetch, process, and analyse Nordpool data."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Alexander Gardner" }
]
dependencies = [
  "requests~=2.24.0"
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]